feat: pagina web de cv

--- a/review_html_CarlosRosero/cv-Carlos-Rosero.html
+++ b/review_html_CarlosRosero/cv-Carlos-Rosero.html
@@ -44,21 +44,25 @@
                 <caption style="font-size: 30px; ">Experiencia laboral</caption>
                 <span style="text-align: center; align-content: center;">
                     <table style="align-content: center;">
-                        <tr style="border: #050505 1px;">
-                            <th style="background-color: #5378a9; border-style:inherit; padding: 10px;">Empresa</th>
-                            <th style="background-color: #5378a9; border-style:inherit; padding: 10px;">Puesto</th>
-                            <th style="background-color: #5378a9; border-style:inherit; padding: 10px;">Periodo</th>
-                        </tr>
-                        <tr>
-                            <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">DreamSoft</td>
-                            <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">Programador</td>
-                            <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">2024 - 2025</td>
-                        </tr>
-                        <tr>
-                            <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">OrdeminWare</td>
-                            <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">Programador</td>
-                            <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">2025 - Presente</td>
-                        </tr>
+                        <thead>
+                            <tr style="border: #050505 1px;">
+                                <th style="background-color: #5378a9; border-style:inherit; padding: 10px;">Empresa</th>
+                                <th style="background-color: #5378a9; border-style:inherit; padding: 10px;">Puesto</th>
+                                <th style="background-color: #5378a9; border-style:inherit; padding: 10px;">Periodo</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">DreamSoft</td>
+                                <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">Programador</td>
+                                <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">2024 - 2025</td>
+                            </tr>
+                            <tr>
+                                <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">OrdeminWare</td>
+                                <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">Programador</td>
+                                <td style="background-color:rgb(166, 166, 43); border-style:inherit; padding: 20px;">2025 - Presente</td>
+                            </tr>
+                        </tbody>
                     </table>
                 </span>
             </aside>
